--- a/.github/workflows/cfd-gradle.yml
+++ b/.github/workflows/cfd-gradle.yml
@@ -33,4 +33,5 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@3fbe033aaae657f011f88f29be9e65ed26bd29ef
       with:
+        build-root-directory: /home/runner/work/iahaa1/iahaa1/Iahaa1/
         arguments: build
